# recipe-app-api

./: .dockerignore  .gitignore  Dockerfile  OLD_Dockerfile  README.md  UV_v1_Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.OLDYML
app/app/: settings.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_auto_20260218_0006.py  0004_rename_tag_recipe_tags.py  0005_auto_20260220_1840.py  0006_recipe_image.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/recipe/: serializers.py  urls.py  views.py
app/recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags.py  test_tags_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
